--- a/gif-main/src/main/resources/application.properties
+++ b/gif-main/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gifmain
 spring.datasource.username=postgres
 spring.datasource.password=root
+server.port=8081
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
