added gateway and eureka

--- a/gif-main/src/main/resources/application.properties
+++ b/gif-main/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.application.name=gif-service
+
+
