--- a/gifs/src/main/resources/application.properties
+++ b/gifs/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.application.name=file-service
+server.port=8080
