--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.application.name=gateway
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/master
+
+server.port=8070
+
+
 ## Gif Service Route
 spring.cloud.gateway.routes[0].id=gif-service
 spring.cloud.gateway.routes[0].uri=lb://gif-service
