--- a/gif-main/src/main/resources/application.properties
+++ b/gif-main/src/main/resources/application.properties
@@ -16,4 +16,9 @@ spring.jpa.database=postgresql
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.application.name=gif-service
 
-
+#Kafka properties
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id=myGroup
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.gifmain.models.Gif
